# Qcontrol_Geometry-of-density-matrices

./: .gitignore  .pre-commit-config.yaml  README.md  Restrction-control3.py  controlSetup3.py  fidelity.py  geodesic.py  getTimeFidelity.py  main.py  muk.py  pauli_mat_vec.py  plots fidelity-towards-intermediary.ipynb  pyproject.toml  qutip-integration.ipynb  requirements.txt  test_control.py  utils.py  working.py
.github/workflows/: python-app.yml
ControlWithGeodesic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contrlWithGeodesics/: __init__.py  control2_step.py  controlSetup3.py  geodesic.py  getTimeFidelity.py  muk.py  pauli_mat_vec.py
contrlwgeo/: control1_step.py  control3_step.py  controlSetup1.py  controlSetup2.py  controlSetup3.py  fidelity.py  getTimeFidelity.py
control/: __init__.py  geodesic.py  pauli_mat_vec.py
controlwgeo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_control.py
