[project]
version="0.1.0"
name = "controlwgeo"
description = "Optimal Control using geodesics of Density matrices manifild "
readme = "README.md"
authors = [
    { name = "Mauro Mendizabal", email = "murogrande20@gmail.com" },
    { name = "Dominique Spehner", email = "dspehner@ing-mat.udec.cl" },
]

requires-python = ">=3.10"
dependencies =["numpy","scipy" ,"simpy"]
